# playground

./: .gitignore  LICENSE  README.md  go.mod  go.sum
.obsidian/: workspace.json
apisix/: .gitignore  Dockerfile  README.md  docker-compose.yaml  upstream.py
c-cpp/: hello.c  hello.cpp  inotify.c  read.c  write.c
c_cpp/: CMakeLists.txt  README.md  ex1.c  hello.c  hello.cpp
chrome-extension-demo/: README.md  background.js  manifest.json  popup.html  popup.js
crustacean/: .gitignore
dapr/: README.md
docker/: README.md
doris/: README.md  ddc-be-cm.yaml  ddc-fe-cm.yaml  ddc-metaservice-cm.yaml  ddc-sample.yaml  fdb-cluster.yaml
git/: clean-big-file-in-git-commit.md
golang/: .gitignore  .workstation-server_DEV  README.md  a.go  go.mod  go.sum
gonic/: .gitignore  README.md  go.mod  go.sum  play_casbin_test.go  race_test.go  reverse_linked_list.go
graphviz/: README.md  demo.dot  skiplist.example.dot
java/: ABCDemo.java  AnnotationTest.java  Interface.java
js/: README.md
k8s/: istio-client-go
kafka-connect/: README.md  docker-compose.yaml
kafka-mirrormaker2/: README.md  connect-cluster.properties  consumer.sh  docker-compose.yml  mm2-01.properties  mm2-02.properties  mm2-connector.json  start.sh  (+5 more)
rust/: .gitignore  Cargo.toml  README.md
rust/ffi-demo/: .gitignore  Cargo.toml  Makefile  build.rs  c_program
rust/ffi-demo/c_src/: c_functions.c  c_functions.h  main.c
rust/ffi-demo/src/: lib.rs
rust/macros/: Cargo.toml
rust/macros/src/: lib.rs
rust/src/: main.rs  stack.rs
rust/wasm-demo/: Cargo.toml  Makefile
rust/wasm-demo/src/: lib.rs
(+403 files in other folders)
