[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", ]

# 启用所有 bin 目录下的文件作为独立可执行文件
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
thiserror = { version = "2.0.12" }
futures = { version = "0.3.31" }
async-std = { version = "1.13.1", features = ["attributes"] }